--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
 		"@adminjs/prisma": "^5.0.3",
 		"@prisma/adapter-pg": "^6.2.0",
 		"@prisma/client": "^6.2.0",
+		"@types/cors": "^2.8.17",
 		"adminjs": "^7.8.13",
 		"connect-pg-simple": "^10.0.0",
+		"cors": "^2.8.5",
 		"dotenv": "^16.4.7",
 		"express": "^4.21.2",
 		"express-formidable": "^1.2.0",
